cgi_debug.log
  File "/home/nyykooo/Desktop/42lisboa/rank5/Webserv/pages/cgi-bin/teste.py", line 6
    rows = ""for key, value in
             ^^^
SyntaxError: invalid syntax
  File "/home/nyykooo/Desktop/42lisboa/rank5/Webserv/pages/cgi-bin/teste.py", line 7
    for key, value in
IndentationError: unexpected indent
  File "/home/nyykooo/Desktop/42lisboa/rank5/Webserv/pages/cgi-bin/teste.py", line 7
    for key, value in
                     ^
SyntaxError: invalid syntax
